# YukawaColouredNoise

./: README.md  runs.py
analysis/: ChiralTuning.ipynb  analysis.ipynb  bessel.ipynb  blockspin.ipynb  classicalPT.ipynb  clean_data.py  cooling.ipynb  correlations.py  functions.py  functions.py~  integrate_flow.py  mass_fit.py  mass_matteo.py  quantumcorrections.ipynb  read_in_data.py  simple_analysis.ipynb  sliding.ipynb  thermal.ipynb  thermalisation.py
analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb  blockspin-checkpoint.ipynb  quantumcorrections-checkpoint.ipynb
analysis/AutoCorrelation/: CMakeLists.txt  ac.cpp  ac.h  autocorrelation.py
code/: .gitignore  Makefile  README.md  input.toml  makefile_includes  runbw.sh  runitp.sh
code/src/: CGsolver.cu  CGsolver.cuh  Dirac.cu  Dirac.cuh  FermionicDrift.cu  FermionicDrift.cuh  Laplace.cu  Laplace.h  Lattice.cu  Lattice.cuh  Spinor.cuh  colouredNoise.cpp  colouredNoise.h  device_info.h  langevin_gpu_v2.cu  langevin_gpu_v2.cuh  main.cu  managedVector.h  params.h  reductions.cu  reductions.cuh  test.cu  vkFFT.h
runs/: pip-selfcheck.json
runs/lib/: libirml.so.1
